[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperflux-next-polychromatic"
dynamic = ["version"]
description = "Native Polychromatic backend for HyperFlux Next"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = ["hyperflux-next-sdk"]

[project.entry-points."polychromatic.backends"]
hyperflux = "hyperflux_polychromatic:HyperFluxBackend"

[tool.setuptools]
packages = ["hyperflux_polychromatic"]

[tool.setuptools.dynamic]
version = {attr = "hyperflux_polychromatic._version.__version__"}
