[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperflux-next-openrazer-compat"
dynamic = ["version"]
description = "Private OpenRazer D-Bus compatibility provider for HyperFlux Next"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
dependencies = ["hyperflux-next-sdk", "dbus-python>=1.3.2,<2", "PyGObject>=3.42,<4"]

[project.scripts]
hyperflux-openrazer-compat = "hyperflux_openrazer_compat.cli:main"
hyperflux-openrazer-session = "hyperflux_openrazer_compat.session:main"

[tool.setuptools]
packages = ["hyperflux_openrazer_compat"]

[tool.setuptools.dynamic]
version = {attr = "hyperflux_openrazer_compat._version.__version__"}
